--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
     <!--<nav class = "footerlinks">-->
         <div class = "fcir"><li class = "flink"><a href = "telephone.html"> Call </a></li>
             <ul class = "telephone">
-                Call </br>
+                Call
                 T: (914)-751-4561
             </ul>
         </div>
         <div class = "fcir"><li class = "flink"><a href = "email.html"> E-Mail </a></li>
             <ul class = "email">
-                E-Mail </br>
+                E-Mail
                 pl1316@nyu.edu
             </ul>
         </div>
