--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 <body>
     <h1>Hello...</h1>
+    <img src="studio.jpg" >
     <p>Some information about me...</p>
     <div class="bodcir">About Me</div>
     <div class="bodcir">Projects</div>
