--- a/index.html
+++ b/index.html
@@ -2,36 +2,62 @@
 <html lang ='en-US'>
 
 <header>
-    <h1>Peter Lam</h1>
+    <h1>
+        <span class = "name"> Peter Lam </span> <br>
+        <span class = "job"> Audio Engineer/Music Producer </span>
+    </h1>
 </header>
 
 <style>
     header {
-        color: coral;
+        text-align: center;
+        font-family: "Courier New";
+        font-weight: bold;
     }
-    
-    .background {
-        background-image: url("studio.jpg");
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        /*background-size: 100%;*/
-        opacity: 0.5;
+
+    .name {
+        color: deepskyblue;
+        font-size: 36pt;
     }
+
+    .job {
+        color: limegreen;
+        font-size: 20pt;
+    }
+
     .navbar ul{
         list-style-type: none;
         margin:0;
         padding:0;
         text-align:center;
-        background-color: mediumpurple;
+        /*background-color: mediumpurple;*/
+        background-color: antiquewhite;
+        opacity: 0.5;
+        font-family: "Courier New";
+        font-size: 12pt;
     }
 
-    .pages {
+    body {
+        background-image: url("studio.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: deepskyblue;
+    }
+
+    /*.background {*/
+        /*background-image: url("studio.jpg");*/
+        /*background-repeat: no-repeat;*/
+        /*background-attachment: fixed;*/
+        /*background-size: cover;*/
+    /*}*/
+
+    .extpages {
         display:inline-block;
         padding: 10px;
     }
 
     .bodcir {
-        background-color: aqua;
         display: inline-block;
         width: 125px;
         height: 125px;
@@ -39,96 +65,102 @@
         text-align: center;
         line-height: 125px;
         margin-right: 30px;
+        float: right;
+        background-color: bisque;
+        opacity: 0.8;
+        color: darkviolet;
+        font-size: 16pt;
         font-weight: bold;
     }
 
-    body {
-        background-color:#D3D3D3;
-    }
-
     footer {
-        background-color: mediumpurple;
         position: fixed;
         left: 0;
         bottom: 0;
         width: 100%;
-        padding: 20px;
+        background-color: mediumpurple;
+        opacity: 0.8;
+        color: black;
     }
 
-    /*.footerlinks ul {*/
-        /*list-style-type: none;*/
-        /*!*text-align: center;*!*/
-        /*margin: 0;*/
-        /*padding: 0;*/
-    /*}*/
-
-    .fcir {
-        background-color: coral;
+    .ftrcontainer {
+        list-style-type: none;
         display: inline-block;
-        width: 75px;
-        height: 75px;
-        border-radius: 100px;
-        text-align: center;
-        margin-right: 150px;
+        margin-left: 50px;
+        margin-right: 50px;
     }
 
-    ul.telephone {
+    .ftrimg {
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
         text-align: right;
+        vertical-align: middle;
     }
 
-    ul.email {
-        text-align: right;
-    }
-
-    ul.socialmedia {
-        text-align: right;
-    }
-    /*.flink {*/
-        /*display: inline-block;*/
-        /*padding: 10px;*/
-    /*}*/
 </style>
-
-<div class = "background"></div>
 
 <nav class = "navbar">
     <ul>
-        <li class = "pages"><a href = "index.html"> Home </a></li>
-        <li class = "pages"><a href = "resume.html"> Resume </a></li>
-        <li class = "pages"><a href = "projects.html"> Projects </a></li>
-        <li class = "pages"><a href = "contact.html"> Contact </a></li>
+        <li class = "extpages"><a href = "index.html"> Home </a></li>
+        <li class = "extpages"><a href = "resume.html"> Resume </a></li>
+        <li class = "extpages"><a href = "projects.html"> Projects </a></li>
+        <li class = "extpages"><a href = "contact.html"> Contact </a></li>
     </ul>
 </nav>
 
 <body>
+    <!--<div class = "background">-->
+        <!--<div class = "main">-->
+
+        <!--</div>-->
+    <!--</div>-->
+
     <h1>Hello...</h1>
-    <img src="studio.jpg" >
-    <p>Some information about me...</p>
+
+    <div class="bodcir">More...</div>
     <div class="bodcir">About Me</div>
     <div class="bodcir">Projects</div>
-    <div class="bodcir">More</div>
+
+    <p>Some information about me...
+        More info... <br>
+        Some more... <br>
+        A little more... <br>
+        More info... <br>
+        Some more... <br>
+        A little more... <br>
+        More info... <br>
+        Some more... <br>
+        A little more... <br>
+    </p>
+
+
 
 </body>
 
 <footer>
-    <!--<nav class = "footerlinks">-->
-        <div class = "fcir"><li class = "flink"><a href = "telephone.html"> Call </a></li>
-            <ul class = "telephone">
-                Call
-                T: (914)-751-4561
-            </ul>
+    <div class = "ftrcontainer">
+        <p class = "contact">
+            <img class = "ftrimg" src = "phoneicon.png">
+                    Call
+                     T: (914)-751-4561
+        </p>
         </div>
-        <div class = "fcir"><li class = "flink"><a href = "email.html"> E-Mail </a></li>
-            <ul class = "email">
-                E-Mail
-                pl1316@nyu.edu
-            </ul>
+        <div class = "ftrcontainer">
+            <p class = "contact">
+                <img class = "ftrimg" src = "emailicon.png">
+                    E-Mail
+                    pl1316@nyu.edu
+            </p>
         </div>
-        <div class = "fcir"><li class = "flink"><a href = "socialmedia.html"> Follow </a></li>
-            <ul class = "socialmedia">
-                Instagram
-            </ul>
+        <div class = "ftrcontainer">
+            <p class = "contact">
+                <img class = "ftrimg" src = "igicon.jpg">
+                    Follow
+                    Instagram
+            </p>
         </div>
-    <!--</nav>-->
+    </div>
+
 </footer>
 </html>
