--- a/specificity.html
+++ b/specificity.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <p style="color: red; font-size: 18px; padding-left: 50%"><strong>1,0,0,0</strong></p>
-    <div class="float">
-        <div id="enhance">
-            <a href="http://google.com" id="underline">0,2,1,0</a>
-            <h1>0,1,1,1</h1>
+    <div class="rand">
+        <div id="bar">
+            <a href="http://github.com" id="underline">0,2,1,0</a>
+            <p> 0,1,1,1 </p>
         </div>
-        <h3>0,0,1,0</h3>
+        <p>0,0,1,0</p>
     </div>
-    <div id="plain-link">
+    <div id="google">
         <a href="http://www.google.com">0,1,0,0</a>
     </div>
-    <p>0,0,0,1</p>
+    <p> 0,0,0,1 </p>
 </body>
 </html>
