--- a/specificity.html
+++ b/specificity.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Specificity</title>
-    <link href="spec.css" rel="stylesheet">
+    <link href="specificity.css" rel="stylesheet">
 </head>
 <body>
     <p style="color: red; font-size: 18px; padding-left: 50%"><strong>1,0,0,0</strong></p>
