--- a/specificity.html
+++ b/specificity.html
@@ -5,7 +5,7 @@
     <link href="specificity.css" rel="stylesheet">
 </head>
 <body>
-    <p style="color: red; font-size: 18px; padding-left: 50%"><strong>1,0,0,0</strong></p>
+    <p style="color: blue; font-size: 16px; padding: 0">1,0,0,0</p>
     <div class="rand">
         <div id="bar">
             <a href="http://github.com" id="underline">0,2,1,0</a>
