--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!doctype html>
 <html lang ='en-US'>
 
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Homework 2
+    </title>
+</head>
+
+<body>
+
 <header>
     <h1>
         <span class = "name"> Peter Lam </span> <br>
         <span class = "job"> Audio Engineer/Music Producer </span>
     </h1>
+    <nav class = "navbar">
+        <ul>
+            <li class = "extpages"><a href = "index.html"> Home </a></li>
+            <li class = "extpages"><a href = "resume.html"> Resume </a></li>
+            <li class = "extpages"><a href = "projects.html"> Projects </a></li>
+            <li class = "extpages"><a href = "contact.html"> Contact </a></li>
+        </ul>
+    </nav>
     <link rel="stylesheet" href="style.css">
 </header>
 
-<nav class = "navbar">
-    <ul>
-        <li class = "extpages"><a href = "index.html"> Home </a></li>
-        <li class = "extpages"><a href = "resume.html"> Resume </a></li>
-        <li class = "extpages"><a href = "projects.html"> Projects </a></li>
-        <li class = "extpages"><a href = "contact.html"> Contact </a></li>
-    </ul>
-</nav>
-
-<body>
     <!--<div class = "background">-->
         <!--<div class = "main">-->
 
@@ -43,33 +50,30 @@
         A little more... <br>
     </p>
 
-
-
-</body>
-
 <footer>
     <div class = "ftrcontainer">
         <p class = "contact">
-            <img class = "ftrimg" src = "phoneicon.png">
+            <img class = "ftrimg" src = "phoneicon.png" alt = "" width = "100" height = "100">
                     Call
                      T: (914)-751-4561
         </p>
-        </div>
-        <div class = "ftrcontainer">
-            <p class = "contact">
-                <img class = "ftrimg" src = "emailicon.png">
-                    E-Mail
-                    pl1316@nyu.edu
-            </p>
-        </div>
-        <div class = "ftrcontainer">
-            <p class = "contact">
-                <img class = "ftrimg" src = "igicon.jpg">
-                    Follow
-                    Instagram
-            </p>
-        </div>
     </div>
-
+    <div class = "ftrcontainer">
+        <p class = "contact">
+            <img class = "ftrimg" src = "emailicon.png" alt = "" width = "100" height = "100">
+            E-Mail
+            pl1316@nyu.edu
+        </p>
+    </div>
+    <div class = "ftrcontainer">
+        <p class = "contact">
+            <img class = "ftrimg" src = "igicon.jpg" alt = "" width = "100" height = "100">
+            Follow
+            Instagram
+        </p>
+    </div>
 </footer>
+
+</body>
+
 </html>
